# starry-tiny

./: .gitignore  COMPILATION_STATUS.md  Cargo.toml  FILESYSTEM_GUIDE.md  INTEGRATION_GUIDE.md  Makefile  PHASE_SUMMARY.md  rust-toolchain.toml
docs/: ch18_file0_min_syscalls.md  component_composition_draft.md  component_layout.md  syscall_checklist.md  syscall_integration_guide.md  syscall_template.md
scripts/: create-disk-image.sh
src/: lib.rs
src/syscall/: dispatch.rs  fd_table.rs  fd_table_new.rs  fd_table_stub.rs  fs.rs  fs_new.rs  mm.rs  mod.rs  sync.rs  sys.rs  table.rs  task.rs  thread.rs
