[package]
name = "starry-tiny"
version = "0.1.0"
edition = "2021"
license = "Apache-2.0"
authors = ["Starry-OS contributors"]
repository = "https://github.com/Starry-OS/os-compare"

[lib]
name = "starry_tiny"
path = "src/lib.rs"

[features]
default = []

[dependencies]
# Core error handling (from crates.io)
axerrno = { version = "0.2", default-features = false }

# Linux syscall numbers and data structures
linux-raw-sys = { version = "0.11", default-features = false, features = [
    "no_std",
    "general",
] }

# Logging (optional)
log = { version = "0.4", default-features = false }

[profile.dev]
opt-level = 0

[profile.release]
opt-level = 3
lto = true
